--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.28",
+    "antd": "^5.10.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
