--- a/package.json
+++ b/package.json
@@ -1,29 +1,21 @@
 {
-  "name": "dev-ecommerce",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/styled-components": "^5.1.28",
-    "antd": "^5.10.0",
-    "next": "13.5.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.11.0",
-    "styled-components": "^6.0.8"
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4",
-    "turbo": "^1.10.16",
-    "typescript": "^5"
-  }
+    "eslint": "^8.48.0",
+    "prettier": "^3.0.3",
+    "tsconfig": "*",
+    "turbo": "latest"
+  },
+  "name": "my-turborepo",
+  "packageManager": "npm@9.3.1",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
