--- a/turbo.json
+++ b/turbo.json
@@ -1,17 +1,10 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalDependencies": ["**/.env.*local"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-
       "outputs": [".next/**", "!.next/cache/**"]
-    },
-    "deploy": {
-      "dependsOn": ["build", "test", "lint"]
-    },
-    "test": {
-      "dependsOn": ["build"],
-      "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.ts", "test/**/*.tsx"]
     },
     "lint": {},
     "dev": {
