--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "name": "dev-ecommerce",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,12 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.1.11",
     "@types/styled-components": "^5.1.29",
     "antd": "^5.10.0",
-    "next": "13.5.4",
+    "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "stripe": "^14.3.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
