--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export -o ./deployment",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
