--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "turbo": "latest"
   },
   "name": "woolshoes",
-  "packageManager": "npm@9.3.1",
+  "packageManager": "yarn@1.22.19",
   "workspaces": [
     "apps/*",
     "packages/*"
