--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -2,6 +2,9 @@
   "name": "tsconfig",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "lint": "tsc"
+  },
   "license": "MIT",
   "publishConfig": {
     "access": "public"
