fix: small changes to solve deployment in vercel

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -23,11 +23,9 @@
         "name": "next"
       }
     ],
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "*"
-      ]
+      "@*": ["./*"]
     },
     "forceConsistentCasingInFileNames": true
   },
