--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,12 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsnd --respawn --transpile-only src/server.ts",
-    "build": "tsc --project ./",
-    "start": "ts-node src/server.ts",
+    "build": "tsc",
+    "start": "node src/server.js",
     "prisma:generate": "npx prisma generate",
     "prisma:pull": "npx prisma db pull",
     "prisma:push": "npx prisma db push"
