--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "pages/api/products.ts"  ],
   "exclude": [
     "node_modules"
   ]
