--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,11 +2,7 @@
   "extends": "tsconfig/nextjs.json",
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -33,9 +29,6 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "pages/api/category/[slug].ts"  ],
-  "exclude": [
-    "node_modules"
-  ]
+    ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
