--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,27 +1,36 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "main": "server.js",
+  "license": "ISC",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx src/server.ts",
+    "build": "tsup src",
+    "start": "node dist/server.js",
     "prisma:generate": "npx prisma generate",
     "prisma:pull": "npx prisma db pull",
     "prisma:push": "npx prisma db push"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@prisma/client": "^5.7.1",
     "@types/node": "^20.8.10",
     "prisma": "^5.7.1",
+    "tsup": "^8.0.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@fastify/cors": "^8.5.0",
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
+    "fastify": "^4.25.2",
+    "fastify-cors": "^6.1.0",
     "ts-node": "^10.9.1"
   }
 }
