--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,13 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "license": "ISC",
-  "engines": {
-    "node": "18"
-  },
   "scripts": {
     "dev": "tsx src/server.ts",
     "build": "tsup src",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "prisma:generate": "npx prisma generate",
     "prisma:pull": "npx prisma db pull",
     "prisma:push": "npx prisma db push"
