--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "license": "ISC",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "dev": "tsx src/server.ts",
     "build": "tsup src",
