--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@stripe/stripe-js": "^2.1.11",
     "@types/styled-components": "^5.1.29",
     "antd": "^5.10.0",
@@ -17,12 +18,14 @@
     "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "stripe": "^14.3.0",
     "styled-components": "^6.1.0",
     "ts-api-utils": "^1.0.3",
-    "tsconfig": "*"
+    "tsconfig": "*",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
