--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -33,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.2",
     "fastify": "^4.25.2",
     "fastify-cors": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
