--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.10.0",
     "axios": "^1.6.2",
     "eslint-config-custom": "*",
+    "jsonwebtoken": "8.5.1",
     "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
