--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,12 +31,15 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/node-cron": "^3.0.11",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "fastify": "^4.25.2",
     "fastify-cors": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "ts-node": "^10.9.1"
   }
 }
